Ignore `cancelled` in misspell

--- a/.github/workflows/misspell.yaml
+++ b/.github/workflows/misspell.yaml
@@ -21,3 +21,4 @@ jobs:
           reporter: github-check
           filter_mode: nofilter
           level: error
+          ignore: cancelled # Ignoring because Misspell is too strict on this.
