--- a/.github/workflows/misspell.yaml
+++ b/.github/workflows/misspell.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: reviewdog/action-misspell@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          locale: "US"
           reporter: github-check
           filter_mode: nofilter
           level: error
